<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".final2">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="227dp"
        android:layout_height="45dp"
        android:text="Payment Methods"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="64dp" />

    <Button
        android:id="@+id/Methods2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#B3000000"
        android:text="@string/Payment1"
        android:textColor="#99F8F5F5"
        app:cornerRadius="20dp"
        app:iconTint="#EFE1C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="351dp"
        android:layout_height="260dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Methods2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/Sale" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginBottom="265dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/threedots" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="41dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="239dp"
        android:layout_height="69dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="Select your payment method"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/divider" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="393dp"
        android:layout_height="218dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lightblue" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="88dp"
        android:text="@string/Cash1"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="188dp"
        android:text="@string/Card1"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="@+id/imageView24"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintVertical_bias="0.021" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="113dp"
        android:layout_height="84dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/Mon" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="140dp"
        android:layout_height="113dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25"
        app:srcCompat="@drawable/creditcard" />

    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginTop="52dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginStart="28dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Methods2"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="21dp"
        android:layout_height="25dp"
        app:srcCompat="@android:drawable/checkbox_on_background"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="147dp" />

    <View
        android:id="@+id/divider9"
        android:layout_width="426dp"
        android:layout_height="1889dp"
        android:background="#BD9F9F"
        android:backgroundTint="#CC020202" />

    <View
        android:id="@+id/divider11"
        android:layout_width="290dp"
        android:layout_height="180dp"
        android:background="@color/white"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="206dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Barcode"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="242dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Using_enter"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="269dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No,thanks"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="341dp" />

    <View
        android:id="@+id/divider12"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:background="@color/black"
        android:backgroundTint="#000000"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="334dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK1"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="341dp" />


</androidx.constraintlayout.widget.ConstraintLayout>