<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newactivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView2"
        android:layout_width="385dp"
        android:layout_height="29dp"
        android:background="#81B3DA"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="88dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:inputType="@string/Paymentamount"
            android:text="Payment amount                      1600.00LKR"
            android:textColor="#131313"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="155dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:inputType="@string/Paymentamount"
            android:text="Payment amount                      1600.00LKR"
            android:textColor="#131313"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="155dp" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/threedots" />
    </com.google.android.material.navigation.NavigationView>


    <TextView
        android:id="@+id/CardDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Card Details"
        android:textColor="#090808"
        android:textColorHighlight="#171515"
        android:textColorLink="#070707"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385"
        tools:layout_editor_absoluteX="27dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="84dp"
        android:src="@drawable/option"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="350dp"
        android:layout_height="115dp"
        android:contentDescription="TODO"
        android:src="@drawable/creditcard"
        app:layout_constraintBottom_toTopOf="@+id/CardDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:background="@color/teal_200"
        android:backgroundTint="@color/black"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="#03A9F4"
        tools:layout_editor_absoluteX="651dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="253dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Card_number"
        android:textColorHighlight="#020202"
        android:textColorLink="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardDetails"
        app:layout_constraintVertical_bias="0.192" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.048661802" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="276dp"
        android:text="Card Number"
        android:textColor="#0C0C0C"
        android:textColorHighlight="#000000"
        android:textColorLink="#070707"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardDetails"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="11/24"
        android:textColorHighlight="#040404"
        android:textColorLink="#040303"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name On Card"
        android:textColor="#070707"
        android:textColorHighlight="#070707"
        android:textColorLink="#050505"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="467dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Expire date"
        android:textColor="#000000"
        android:textColorHighlight="#0E0E0E"
        android:textColorLink="#050505"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="258dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Name_on_card"
        android:textColorHighlight="#070707"
        android:textColorLink="#000000"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cvv1"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="206dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="CVV"
        android:textColor="#090808"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="Card"
        android:textColor="#090808"
        android:textColorHighlight="#050505"
        android:textColorLink="#020202"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/navigationView2"
        app:layout_constraintVertical_bias="0.817"
        tools:layout_editor_absoluteX="162dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/Methods2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#000000"
        android:text="@string/pay"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:iconTint="#EFE1C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="83dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/threedots"
        tools:layout_editor_absoluteX="294dp"
        tools:layout_editor_absoluteY="20dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="41dp"
        android:layout_height="29dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/navigationView2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select_your_payment_method2"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="35dp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Methods2"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider6"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/navigationView2"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>